[tool.poetry]
name = "pr-agent"
version = "0.11"
description = "CodiumAI PR-Agent is an open-source tool to automatically analyze a pull request and provide several types of feedback"
homepage = "https://github.com/Codium-ai/pr-agent"
repository = "https://github.com/Codium-ai/pr-agent"
authors = ["Itamar Friedman <itamar.f@codium.ai>"]
maintainers = [
    "Ori Kotek <ori.k@codium.ai>",
    "Tal Ridnik <tal.r@codium.ai>",
    "Hussam Lawen <hussam.l@codium.ai>",
    "Sagi Medina <sagi.m@codium.ai>",
]
keywords = ["ai", "tool", "developer", "review", "agent"]
license = "Apache 2.0 License"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: Independent",
  "Programming Language :: Python :: 3",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.1"
atlassian-python-api = "3.39.0"
azure-devops = "7.1.0b3"
boto3 = "1.33.6"
dynaconf = "3.2.4"
fastapi = "0.99.0"
gitpython = "3.1.32"
google-cloud-aiplatform = "1.35.0"
google-cloud-storage = "2.10.0"
jinja2 = "3.1.2"
litellm = "0.12.5"
loguru = "0.7.2"
msrest = "0.7.1"
openai = "0.27.8"
pygithub = "==1.59.*"
pyyaml = "6.0.1"
python-gitlab = "3.15.0"
retry = "0.9.2"
starlette-context = "0.3.6"
tiktoken = "0.5.2"
ujson = "5.8.0"
uvicorn = "0.22.0"
pinecone-client = "^2.2.4"
pinecone-datasets = {git = "https://github.com/mrT23/pinecone-datasets.git", rev = "main"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.26.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pr-agent = "python pr_agent.cli:run"
